[gd_scene load_steps=2 format=3 uid="uid://cyaeyy6224qf1"]

[ext_resource type="Script" path="res://scripts/GameManager.gd" id="1_f5gde"]

[node name="MainMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f5gde")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="LoadAvatarButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Load Default Avatar"

[node name="GenerateAvatarButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Generate New Avatar"

[node name="ThemeButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Toggle High Contrast"

[connection signal="pressed" from="VBoxContainer/LoadAvatarButton" to="." method="_on_LoadAvatar_pressed"]
[connection signal="pressed" from="VBoxContainer/GenerateAvatarButton" to="." method="_on_GenerateAvatar_pressed"]
[connection signal="pressed" from="VBoxContainer/ThemeButton" to="." method="_on_ThemeButton_pressed"]
